[FEATURE] save changes to localstorage

--- a/src/app/editor/editor.component.html
+++ b/src/app/editor/editor.component.html
@@ -3,6 +3,7 @@
 
     <quill-editor
       [(ngModel)]="quillContent"
+      format="json"
       trackChanges="all"
       [modules]="quillModules"
       [styles]="{ height: '200px' }"
