--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,13 +1,7 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
   <div class="container-fluid">
-    <a class="navbar-brand" href="#">Quill POC</a>
+    <a class="navbar-brand" routerLink="/dashboard" routerLinkActive="active" ariaCurrentWhenActive="page">Quill POC</a>
   </div>
-  <form class="d-flex">
-    <div class="mb-3">
-      <label for="formFile" class="form-label">Default file input example</label>
-      <input class="form-control" type="file" id="formFile">
-    </div>
-  </form>
 </nav>
 
 <div class="container pb-5">
