[UI FIX] editor UI updated - cleanup

--- a/src/app/components/editor/editor.component.scss
+++ b/src/app/components/editor/editor.component.scss
@@ -1,10 +1,6 @@
-#delta-container {
-  white-space: pre-wrap;
-  overflow-y: auto;
-  border: 1px solid #ccc;
-  box-sizing: border-box;
-  display: inline-block;
-  height: 267px;
-  padding: 5px;
+.delta-container {
+  overflow: auto;
+  padding: 0;
+  height: 226px;
   width: 100%;
 }
