[QUICKFIX] UI fix

--- a/src/app/components/editor/editor.component.html
+++ b/src/app/components/editor/editor.component.html
@@ -44,7 +44,7 @@
         </h5>
       </div>
 
-      <div class="card-body">
+      <div class="card-body" style="padding: 0;">
         <pre>
           <code [highlight]="getQuillContent() | json" [languages]="['json']"></code>
         </pre>
